infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketsapi
  template:
    metadata:
      labels:
        app: ticketsapi
    spec:
      containers:
        - name: ticketsapi
          image: kesarwanishashwat/ticketing-ticketsapi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketsapi-serv
spec:
  selector:
    app: ticketsapi
  ports:
    - name: ticketsapi
      protocol: TCP
      port: 3000
      targetPort: 3000
